# glidex

./: .gitignore  Cargo.toml  README.md  install.sh
crates/glidex-control-plane/: Cargo.toml
crates/glidex-control-plane/src/: api.rs  firecracker.rs  lib.rs  main.rs  models.rs  pci.rs  persistence.rs  state.rs
crates/glidex-control-plane/src/hypervisor/: cloud_hypervisor.rs  firecracker.rs  mod.rs  qemu.rs
crates/glidex-control-plane/tests/: api_tests.rs
crates/glidex-install/: Cargo.toml
crates/glidex-install/src/: main.rs
crates/glidex-ui/: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
crates/glidex-ui/src/: app.rs  lib.rs  main.rs  types.rs
crates/glidex-ui/src/api/: client.rs
crates/glidex-ui/src/components/: create_vm_form.rs  header.rs  loading.rs  mod.rs  modal.rs  vm_actions.rs  vm_card.rs
crates/glidex-ui/src/pages/: dashboard.rs  mod.rs  not_found.rs  vm_detail.rs
crates/glidex-ui/style/: main.css
crates/glidex-ui/ui/: index.html  package.json
crates/glidex-ui/ui/src/: App.tsx  api.ts  index.css  types.ts
crates/glidex-ui/ui/src/components/: CreateVmForm.tsx  Header.tsx  Loading.tsx  Modal.tsx  VmActions.tsx  VmCard.tsx
crates/glidex-ui/ui/src/pages/: Dashboard.tsx  NotFound.tsx  VmConsole.tsx  VmDetail.tsx
spec/: README.md  architecture.md  cli.md  console.md  data-model.md  hypervisors.md  installer.md  rest-api.md  web-ui.md
src/: api.rs  firecracker.rs  lib.rs  main.rs  models.rs  state.rs
tests/: api_tests.rs
