[package]
name = "glidex-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
rustyline = "15"
colored = "3"
tabled = "0.17"
ctrlc = "3"
nix = { version = "0.29", features = ["term", "fs", "process"] }
libc = "0.2"
redb = "3"
dirs = "6"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
tempfile = "3"

[[bin]]
name = "gxctl"
path = "src/bin/gxctl.rs"

[[bin]]
name = "glidex-control-plane"
path = "src/main.rs"
