[workspace]
members = ["crates/glidex-control-plane", "crates/glidex-ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
