[package]
name = "glidex-ui"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos core
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

# Axum for SSR
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tokio = { workspace = true, optional = true }
http = { version = "1", optional = true }

# HTTP client for API calls
reqwest = { workspace = true }

# Shared dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Utility
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = ["Window", "Location"], optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "wasm-bindgen", "console_error_panic_hook", "gloo-timers", "web-sys"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum",
    "axum",
    "tower",
    "tower-http",
    "tokio",
    "http",
    "tracing-subscriber",
]

[package.metadata.leptos]
output-name = "glidex-ui"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
